--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,43 +4,18 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-    <TextView
-        android:id="@+id/network_title"
-        android:layout_width="fill_parent"
+    <Button
+        android:id="@+id/actual_button"
+        android:text="Actual Locations"
         android:layout_height="wrap_content"
-        android:text="@string/network_provider_text" />
-<TextView
-    android:id="@+id/network_latitude"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/network_latitude"
-    />
+        android:layout_width="fill_parent">
+    </Button>
 
-<TextView
-    android:id="@+id/network_longitude"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/network_longitude"
-    />
-
-    <TextView
-            android:id="@+id/gps_title"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/gps_provider_text" />
-    <TextView
-            android:id="@+id/gps_latitude"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/gps_latitude"
-            />
-
-    <TextView
-            android:id="@+id/gps_longitude"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/gps_longitude"
-            />
-
+    <Button
+        android:id="@+id/mock_button"
+        android:text="Mock Locations"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent">
+    </Button>
 </LinearLayout>
 
